fixed gt-meta z-index

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3670,7 +3670,6 @@ fieldset {
 .article-excerpt{
     font-size:.875rem;
     line-height: 1.5rem;
-    margin-top: 0.5rem;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
